--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
   <header class="header">
     <h1>About Us</h1>
     <p>Your trusted partner for hassle-free car rentals!</p>
+    <li><a style="color: aliceblue;" href="./home.html">Home</a></li>
   </header>
 
   <main class="content">
