--- a/car_rentals.html
+++ b/car_rentals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Rental - CARRUS</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
 
@@ -44,7 +44,7 @@
     </div>
 </div>
 
-<script src="car_rental.js"></script>
+<!-- <script src="car_rental.js"></script> -->
 
 </body>
 </html>
