--- a/home.html
+++ b/home.html
@@ -52,8 +52,8 @@
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="./review.html">Review</a></li>
                     <!-- <li><a href="./newpayment.html">Payment</a></li> -->
-                    <li><a href="./profile.html">Profile</a></li>
-                    <li><a href="./browse_cars.php">Favourite</a></li>
+                    <li><a href="./profile.php">Profile</a></li>
+                    <li><a href="./favourite.php">Favourite</a></li>
                     <li><a href="insurance.html" >Insurance Policy</a></li>
 
                 </ul>
@@ -159,7 +159,7 @@
           <h2>Get our Services now</h2>
           <ul style="list-style: none; padding: 0; margin: 0; display: flex; flex-direction: column; gap: 0.5rem;">
             <li><a href="rentcarnew.html">Rent a car?</a></li>
-            <li><a href="./subscribe_car.html">Car subscription?</a></li>
+            <li><a href="./subscribe_form.php">Car subscription?</a></li>
             <li><a href="./driver.html">Work as Driver?</a></li>
             <li><a href="./car.html">Lend your car?</a></li>
           </ul>
