--- a/review.html
+++ b/review.html
@@ -23,7 +23,7 @@
     ">
       Carr<span style="color: #335778;">Us</span>
     </div>
-    <ul class="navbar-links" id="primary-navigation">
+    <ul class="navbar-links pe-5" id="primary-navigation">
       <li><a href="./home.html">Home</a></li>
     </ul>
   </nav>
